--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ risc0-zkvm = { version = "2.0.2" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 anyhow = "1.0"
 dotenv = "0.15"
+k256 = { version = "0.13.4" }
+sha3 = { version = "0.10.8" }
 
 [dev-dependencies]
 hex = "0.4"
