--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "1.0"
 dotenv = "0.15"
 k256 = { version = "0.13.4" }
 sha3 = { version = "0.10.8" }
+zkguard_core = { path = "./core" }
+bincode = "1.3.3"
 
 [dev-dependencies]
 hex = "0.4"
