--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -11,3 +11,5 @@ tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 k256 = { version = "0.13.4" }
+zkguard_core = { path = "../../core" }
+bincode = { version = "1.3.3" }
