--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -13,3 +13,6 @@ serde = { version = "1.0", default-features = false, features = ["derive"] }
 k256 = { version = "0.13.4" }
 zkguard_core = { path = "../../core" }
 bincode = { version = "1.3.3" }
+once_cell = { version = "1.17" }
+hex-literal = { version = "0.4" }
+hex = "0.4"
