--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -10,9 +10,11 @@ risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std", "
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-k256 = { version = "0.13.4" }
+k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "alloc"] }
 zkguard_core = { path = "../../core" }
 bincode = { version = "1.3.3" }
 once_cell = { version = "1.17" }
 hex-literal = { version = "0.4" }
 hex = "0.4"
+sha3 = { version = "0.10", default-features = false }
+rand  = { version = "0.8", default-features = false, features = ["std"] }
