--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 zkguard-methods = { path = "methods" }
-risc0-zkvm = { version = "2.0.2" }
+risc0-zkvm = { version = "2.1", default-features = false, features = ["std", "unstable", "client"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 anyhow = "1.0"
 dotenv = "0.15"
