--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -6,11 +6,10 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std", "unstable"] }
+risc0-zkvm = { version = "2.1", default-features = false, features = ["std", "unstable"] }
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "alloc"] }
 zkguard_core = { path = "../../core" }
 bincode = { version = "1.3.3" }
 once_cell = { version = "1.17" }
@@ -18,3 +17,11 @@ hex-literal = { version = "0.4" }
 hex = "0.4"
 sha3 = { version = "0.10", default-features = false }
 rand  = { version = "0.8", default-features = false, features = ["std"] }
+k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
+
+[patch.crates-io]
+# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
+# multiplication accelerator support for all downstream usages of the following crates.
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
+k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
+crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
