--- a/risc0/Cargo.toml
+++ b/risc0/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2021"
 rs_merkle   = { version = "1.5.0", default-features = false }
 clap = { version = "4.0", features = ["derive"] }
 zkguard-methods = { path = "methods" }
-risc0-zkvm = { version = "2.1", default-features = false, features = ["std", "unstable", "client"] }
+risc0-zkvm = { version = "2.3", default-features = false, features = ["std", "unstable", "client"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 anyhow = "1.0"
 dotenv = "0.15"
 k256 = { version = "0.13.4" }
-sha3 = { version = "0.10.8" }
 zkguard_core = { path = "./core" }
 bincode = "1.3.3"
 hex = "0.4"
+tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 
 [features]
 cuda = ["risc0-zkvm/cuda"]
