--- a/risc0/core/Cargo.toml
+++ b/risc0/core/Cargo.toml
@@ -10,7 +10,8 @@ crate-type = ["rlib"]     # ordinary Rust library
 [dependencies]
 serde        = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
-risc0-zkvm = { version = "2.1", default-features = false, features = ["std", "unstable"] }
+risc0-zkvm = { version = "2.3", default-features = false, features = ["std", "unstable"] }
 sha3 = { version = "0.10.6", default-features = false }
 bincode = { version = "1.3", default-features = false }
 rs_merkle = { version = "1.3.0", default-features = false }
+sha2 = { version = "0.10", default-features = false }
