--- a/risc0/methods/guest/Cargo.toml
+++ b/risc0/methods/guest/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "2.1", default-features = false, features = ["std", "unstable"] }
+risc0-zkvm = { version = "2.3", default-features = false, features = ["std", "unstable"] }
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
@@ -15,13 +15,13 @@ bincode = { version = "1.3.3" }
 once_cell = { version = "1.17" }
 hex-literal = { version = "0.4" }
 hex = "0.4"
-sha3 = { version = "0.10", default-features = false }
-rand  = { version = "0.8", default-features = false, features = ["std"] }
+rand = { version = "0.8", default-features = false, features = ["std"] }
 k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
+sha2 = "0.10.8"
 
 [patch.crates-io]
-# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
-# multiplication accelerator support for all downstream usages of the following crates.
-sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
+# Corrected sha2 tag to match the dependency version
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
 k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
 crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
+tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
