--- a/risc0/Cargo.toml
+++ b/risc0/Cargo.toml
@@ -21,3 +21,7 @@ tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 cuda = ["risc0-zkvm/cuda"]
 default = []
 prove = ["risc0-zkvm/prove"]
+
+[[example]]
+name = "dao_prover"
+path = "examples/dao_prover.rs"
