Fix Noir program and update risc0

--- a/risc0/methods/Cargo.toml
+++ b/risc0/methods/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-risc0-build = { version = "2.1.2", features = ["unstable"] }
+risc0-build = { version = "3.0.3", features = ["unstable"] }
+risc0-build-ethereum = "3.0.1"
 
 [package.metadata.risc0]
 methods = ["guest"]
