--- a/risc0/methods/guest/Cargo.toml
+++ b/risc0/methods/guest/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "2.3", default-features = false, features = ["std", "unstable"] }
+risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable"] }
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 serde_json = "1.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
@@ -18,6 +18,8 @@ hex = "0.4"
 rand = { version = "0.8", default-features = false, features = ["std"] }
 k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
 sha2 = "0.10.8"
+alloy-sol-types = { version = "1.0.0" }
+alloy-primitives = { version = "1.0.0" }
 
 [patch.crates-io]
 # Corrected sha2 tag to match the dependency version
