--- a/noir/Nargo.toml
+++ b/noir/Nargo.toml
@@ -7,3 +7,4 @@ authors = ["Ziemann"]
 [dependencies]
 keccak256 = { git = "https://github.com/noir-lang/keccak256", tag = "v0.1.0" }
 ecrecover = { git = "https://github.com/colinnielsen/ecrecover-noir", tag = "v1.0.0" }
+sha256 = { git = "https://github.com/noir-lang/sha256", tag = "v0.2.1" }
