--- a/risc0/Cargo.toml
+++ b/risc0/Cargo.toml
@@ -8,7 +8,9 @@ rs_merkle   = { version = "1.5.0", default-features = false }
 clap = { version = "4.0", features = ["derive"] }
 zkguard-methods = { path = "methods" }
 risc0-zkvm = { version = "2.3", default-features = false, features = ["std", "unstable", "client"] }
+bonsai-sdk = { version = "1.4.1" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde_json = "1.0"
 anyhow = "1.0"
 dotenv = "0.15"
 k256 = { version = "0.13.4" }
@@ -16,6 +18,14 @@ zkguard_core = { path = "./core" }
 bincode = "1.3.3"
 hex = "0.4"
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
+bytemuck = "1.14"
+alloy-sol-types = { version = "1.0.0" }
+alloy-primitives = { version = "1.0.0" }
+alloy = { version = "1.0.36", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+url = "2.5.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [features]
 cuda = ["risc0-zkvm/cuda"]
