--- a/risc0/core/Cargo.toml
+++ b/risc0/core/Cargo.toml
@@ -15,3 +15,4 @@ sha3 = { version = "0.10.6", default-features = false }
 bincode = { version = "1.3", default-features = false }
 rs_merkle = { version = "1.3.0", default-features = false }
 sha2 = { version = "0.10", default-features = false }
+hex = "0.4"
