--- a/risc0/core/Cargo.toml
+++ b/risc0/core/Cargo.toml
@@ -16,3 +16,5 @@ bincode = { version = "1.3", default-features = false }
 rs_merkle = { version = "1.3.0", default-features = false }
 sha2 = { version = "0.10", default-features = false }
 hex = "0.4"
+alloy-primitives = { version = "1.0.0" }
+alloy-sol-types = { version = "1.0.0" }
