--- a/noir/requirements.txt
+++ b/noir/requirements.txt
@@ -1,3 +1,18 @@
-toml
-eth-hash
-coincurve
+attrs==25.4.0
+coincurve==21.0.0
+eth-hash==0.7.1
+galois==0.3.10
+iniconfig==2.3.0
+llvmlite==0.42.0
+numba==0.59.1
+numpy==1.26.4
+packaging==25.0
+pluggy==1.6.0
+poseidon-hash==0.1.4
+py==1.11.0
+pycryptodome==3.23.0
+pytest==7.1.3
+setuptools==80.9.0
+toml==0.10.2
+tomli==2.3.0
+typing_extensions==4.15.0
